--- a/resources.qrc
+++ b/resources.qrc
@@ -42,6 +42,8 @@
         <file>getTicketsByEmployee.sql</file>
         <file>getStatusesWithoutEnding.sql</file>
         <file>updateTicketStatusOnly.sql</file>
+        <file>getBossesIdAndFullName.sql</file>
+        <file>getUserRoleById.sql</file>
     </qresource>
     <qresource prefix="/templates">
         <file>templates/ticket_template.html</file>
